force-app/main/default/objects/Opportunity/fields/Propfocus_Buyer_Insights_Available__c.field-meta.xml
<CustomField>
    <fullName>Propfocus_Buyer_Insights_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Propfocus Buyer Insights Available</label>
    <type>Checkbox</type>
</CustomField>