force-app/main/default/objects/Opportunity/fields/Propfocus_Post_Visit__c.field-meta.xml
<CustomField>
    <fullName>Propfocus_Post_Visit__c</fullName>
    <label>Propfocus Post Visit</label>
    <type>Url</type>
</CustomField>