force-app/main/default/objects/Opportunity/fields/Propfocus_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Propfocus_Site_Visit__c</fullName>
    <label>Propfocus Site Visit</label>
    <type>Url</type>
</CustomField>